infrastructure/kubernetes/base/istio-config/destination-rules.yaml
# SAMPLE/DEMO DestinationRules enforcing mTLS for FAST services.
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: ui-default
  namespace: fast
spec:
  host: ui-default.fast.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: api-etl
  namespace: fast
spec:
  host: api-etl.fast.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: api-model
  namespace: fast
spec:
  host: api-model.fast.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
